--- a/goproject/views/register.html
+++ b/goproject/views/register.html
@@ -27,10 +27,10 @@
 
 <div class="htmleaf-container">
     <div class="wrapper">
-        {{/*注册表单*/}}
+    {{/*注册表单*/}}
         <div class="container">
             <h1>Welcome</h1>
-            <form id="register-form" class="form">
+            <form id="register-form" class="form" method="post">
                 <input type="text" name="username" placeholder="Username">
                 <input type="password" name="password" placeholder="Password" id="register-password">
                 <input type="password" name="repassword" placeholder="rePassword">
@@ -39,7 +39,7 @@
             </form>
         </div>
 
-        {{/*背景动画*/}}
+    {{/*背景动画*/}}
         <ul class="bg-bubbles">
             <li></li>
             <li></li>
@@ -57,16 +57,3 @@
 
 </body>
 </html>
-3.2.6 添加退出脚本
-我们先在nav.html页面中，添加退出的脚本：
-
-<div id="nav-login">
-    <ul>
-        {{if .IsLogin}}
-        <li><a href='javascript:if(confirm("确定退出吗？")){location="/exit"}'>退出</a></li>
-        {{else}}
-        <li><a href="/login">登录</a></li>
-        <li><a href="/register">注册</a></li>
-        {{end}}
-    </ul>
-</div>
